# Flights-Data-Crawler

./: .gitignore  AllCorp_FlightInfo.py  AllCorp_ListCrawler.py  AllCorp_ListCrawler_local.py  EVA_FlightDataCrawler_all_2.ipynb  EVA_FlightDataCrawler_all_3.ipynb  EVA_ListCrawler_3.ipynb  README.md  pyproject.toml
Cloud_Version/: AllCorp_ListCrawler_cloud.py  DevEnv_zeabur_1.Dockerfile  app.py  requirements.txt
FlightMod/: CrawlList.py  FlightInfo.py
Mods/: CrawlList.py  FlightInfo.py  date_mod.py  pandas_mod.py
airflow/dags/: D_01_Flights_List.py  E_flights_list.ipynb
airflow/tasks/: pandas_mod.py
airflow/utils/: config.py
code/: EVA_FlightDataCrawler_all_3.ipynb  E_AllCorp_FlightInfo.py  E_AllCorp_ListCrawler_local.ipynb  E_AllCorp_ListCrawler_local.py  E_airline.ipynb  E_airport_code.ipynb  E_flights_info.ipynb  E_flights_list.ipynb  T_flights_info.ipynb  T_flights_list.ipynb  test.ipynb  test.py
