[project]
name = "flights-data-crawler"
version = "0.1.0"
description = ""
authors = [
    {name = "Bevis",email = "add412@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "google-cloud-storage (>=3.4.1,<4.0.0)",
    "selenium (>=4.36.0,<5.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=6.30.1,<7.0.0)"
]
